# br-acc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  PR_BODY.md  README.md  ROADMAP.md  TASKS.md  docker-compose.yml
.gemini/: settings.json
.github/: claude-automerge-policy.json  copilot-instructions.md
.github/agents/: docs.agent.md
.github/instructions/: api.instructions.md  etl.instructions.md  frontend.instructions.md
.github/workflows/: auto-label.yml  ci.yml  claude-pr-governor.yml  copilot-setup-steps.yml  publish-release.yml  security.yml
.windsurf/workflows/: create-pr.md
agents_docs/: build-and-test.md  git-workflow.md  security-and-compliance.md
api/: Dockerfile.dev  pyproject.toml
bots/telegram/: Dockerfile  pyproject.toml
bots/telegram/src/bracc_telegram/: __init__.py  api_client.py  bot.py  config.py  formatter.py  handlers.py  rate_limiter.py
bots/telegram/tests/: test_api_client.py  test_bot.py  test_config.py  test_formatter.py  test_rate_limiter.py
cli/: DEV_NOTES.md  README.md  pyproject.toml
cli/bracc_cli/: __init__.py  config.py  main.py
cli/bracc_cli/commands/: __init__.py  api.py  dev.py  etl.py  health.py  report.py
docs/: HONEST_ASSESSMENT_2026-03.md  ai-pr-governor.md
etl/: pyproject.toml
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json
infra/: Caddyfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: bootstrap_all_public.sh  bootstrap_public_demo.sh  linear_audit.py  pre-commit.sh  prepare_public_snapshot.sh
(+77 files in other folders)
